Jump Start Changelog
====================

2.0.2 - XX/XX/XXXX
------------------

* Fixed: In executive base, standard header background elements were being outputted with Transparent header.
* Fixed: Added missing localization for theme bases admin page text.

--------------------------------------------------------------

2.0.1 - 08/24/2015
------------------

* **Updated Theme Blvd framework to 2.5.1**
* Cleaned up and optimized assets in `/framework` directory, reducing file size by about 2MB.
* New: CSS class "has-nav" to footer copyright area if Footer Navigation location has menu.
* New: More accuracy for opacity selections.
* New: In custom layouts, "visible" CSS class gets added to top-level elements and sections as you scroll down the page.
* Improvement: General comments template and comments link logic.
* Improvement: Allow WooCommerce shop to accept theme-related options from original static page.
* Improvement: Hero unit full-screen horizontal alignment, when text is aligned left or right.
* Improvement: Parallax background image performance.
* Fixed: Responsiveness of images with captions.
* Fixed: Awkward spacing of captions on slider captions; now vertically centered.
* Fixed: Portfolios and portfolio tags not showing in portfolio item sub meta.
* Fixed: Columns in custom layouts with backgrounds had margin below, when stacking for mobile.
* Fixed: Incorrect file permissions of files at `/framework/assets/svg/` for those uploading the theme manually outside of WordPress.
* Fixed: Theme's default WPML language selector listing languages without translations.
* Fixed: System for generating FontAwesome icon selections in admin.
* Fixed: Minor admin compatibility issue with WPML 3.2 update.
* Fixed: Minor admin styling issues with WordPress 4.3.
* Fixed: Outputted Google Font name CSS declarations not being in quotes.
* Removed: Parallax intensity options; now it's based on height of image, proportional to container.